--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.18.1",
     "parser": "^0.1.4",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
-    "dotenv": "^8.2.0",
     "sequelize": "^6.21.2"
   },
   "devDependencies": {
