--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "dependencies": {
     "axios": "^0.27.2",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.18.1",
+    "express-jwt": "^7.7.5",
+    "helmet": "^5.1.0",
+    "jwks-rsa": "^2.1.4",
     "parser": "^0.1.4",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
