--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +18,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.18.1",
     "express-jwt": "^7.7.5",
+    "express-jwt-authz": "^2.4.1",
     "helmet": "^5.1.0",
     "jwks-rsa": "^2.1.4",
     "parser": "^0.1.4",
