--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "parser": "^0.1.4",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.21.2"
+    "sequelize": "^6.21.2",
+    "jwks-rsa": "^2.1.4",
+    "express-jwt-authz": "^2.4.1",
+    "express-jwt": "^7.7.5",
+    "helmet": "^5.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
