--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.1",
     "express-jwt": "^7.7.5",
     "express-jwt-authz": "^2.4.1",
+    "express-jwt-permissions": "^1.3.6",
     "helmet": "^5.1.0",
     "jwks-rsa": "^2.1.4",
     "parser": "^0.1.4",
